-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
9223372036854775807
a couple of problems on inheritance:
- the start index inherited from parent may conflict to the pool inherited from root what prevents new file creation;
- adjust stripe_count by the count of targets in the pool only if the pool is not dropped on inheritance;
- a new dir does not inherit the ost list, but inherit the other LOVEA parameters, start index in particular;