lustre/tests/test-framework.sh
@@ -10039,15 +10039,10 @@ pool_add_targets() {
 	echo "Adding targets to pool"
 	local pool=$1
 	local first=$2
-	local last=$3
+	local last=${3:-$first}
 	local step=${4:-1}
 
-	if [ -z $last ]; then
-		local list=$first
-		last=$first
-	else
-		local list=$(seq $first $step $last)
-	fi
+	local list=$(seq $first $step $last)
 
 	local t=$(for i in $list; do printf "$FSNAME-OST%04x_UUID " $i; done)
 	local tg=$(for i in $list;
